// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL-Platform Integration Apollo Server creates an ApolloServer instance 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "articles": [
          {
            "body": {
              "blocks": [],
              "entityMap": {},
            },
            "createdAt": "2022-01-01T00:00:00.000Z",
            "lowerCasedTitle": "draft-my first draft article-home",
            "machineTags": null,
            "metas": {
              "myArbitraryKey": "with my arbitrary value",
            },
            "score": 0.5,
            "similars": [],
            "status": "DRAFT",
            "tagCount": 0,
            "tags": [],
            "title": "My first draft article",
            "views": "0",
          },
          {
            "body": null,
            "createdAt": "2022-02-01T00:00:00.000Z",
            "lowerCasedTitle": "draft-my second draft article-home",
            "machineTags": null,
            "metas": null,
            "score": 0.5,
            "similars": [],
            "status": "DRAFT",
            "tagCount": 0,
            "tags": [],
            "title": "My second draft article",
            "views": "0",
          },
          {
            "body": null,
            "createdAt": "2022-03-01T00:00:00.000Z",
            "lowerCasedTitle": "published-my first published article-news",
            "machineTags": null,
            "metas": null,
            "score": 0.5,
            "similars": [],
            "status": "PUBLISHED",
            "tagCount": 2,
            "tags": [
              {
                "order": 0,
                "tag": {
                  "title": "TV",
                },
              },
              {
                "order": 1,
                "tag": {
                  "title": "High-tech",
                },
              },
            ],
            "title": "My first published article",
            "views": "0",
          },
          {
            "body": {
              "blocks": [],
              "entityMap": {},
            },
            "createdAt": "2022-04-01T00:00:00.000Z",
            "lowerCasedTitle": "published-my second published article-home",
            "machineTags": [
              "namespace:key=a_value",
              "namespace:key=other_value",
            ],
            "metas": {
              "aKey": "withAnyValue",
            },
            "score": 0.12,
            "similars": [],
            "status": "PUBLISHED",
            "tagCount": 1,
            "tags": [
              {
                "order": 0,
                "tag": {
                  "title": "Fashion",
                },
              },
            ],
            "title": "My second published article",
            "views": "1234567890",
          },
          {
            "body": null,
            "createdAt": "2022-05-01T00:00:00.000Z",
            "lowerCasedTitle": "published-my first published article in root category-root",
            "machineTags": null,
            "metas": null,
            "score": 0.5,
            "similars": [],
            "status": "PUBLISHED",
            "tagCount": 3,
            "tags": [
              {
                "order": 0,
                "tag": {
                  "title": "TV",
                },
              },
              {
                "order": 1,
                "tag": {
                  "title": "High-tech",
                },
              },
              {
                "order": 2,
                "tag": {
                  "title": "Fashion",
                },
              },
            ],
            "title": "My first published article in root category",
            "views": "0",
          },
          {
            "body": null,
            "createdAt": "2022-06-01T00:00:00.000Z",
            "lowerCasedTitle": "published-my second published article in root category-root",
            "machineTags": null,
            "metas": null,
            "score": 0.5,
            "similars": [],
            "status": "PUBLISHED",
            "tagCount": 2,
            "tags": [
              {
                "order": 0,
                "tag": {
                  "title": "TV",
                },
              },
              {
                "order": 1,
                "tag": {
                  "title": "Fashion",
                },
              },
            ],
            "title": "My second published article in root category",
            "views": "0",
          },
        ],
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`GraphQL-Platform Integration Apollo Server creates an ApolloServer instance 2`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "articles": null,
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`GraphQL-Platform Integration Apollo Server creates an ApolloServer instance 3`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "articleChanges": null,
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
